# toy-geotool

./: .env  .gitignore  LICENSE  README.md  docker-compose.yml  local.yml  local_down.sh  local_up.sh  production.yml  production_down.sh  production_up.sh
client/py/: main.py  requirements.txt
computer/: Cargo.toml  Dockerfile  run.sh
computer/src/: lttb.rs  main.rs  point.rs  tag.rs  well.rs
db/: Dockerfile  dev.py  dev.sql  postgresql.conf  reset_volume.sh  setup.sql  terminal.sh
haproxy/dev/: Dockerfile  haproxy.cfg
haproxy/prod/: Dockerfile  haproxy.cfg
iac/: clean.sh  main.tf  outputs.tf  variables.tf
iac/modules/: main.tf  outputs.tf  (+1 more)
memdb/: Dockerfile  dev.py
pageserver/: .dockerignore  Cargo.toml  Dockerfile  Rocket.toml  run.sh
pageserver/src/: company.rs  cycle.rs  database.rs  fourier.rs  lttb.rs  main.rs  point.rs  tag.rs  tera.rs  user.rs  well.rs
pageserver/templates/: base.html.tera  catch404.html.tera  catch_default.html.tera
pageserver/templates/cycles/: cycles.html.tera  fix-batch-volume.html.tera  fix-well-data.html.tera  flow-regimes.html.tera  fourier.html.tera  hall.html.tera  horner.html.tera  info.html.tera  last-rate.html.tera  menu.html.tera  stiffness-timeshift.html.tera  stiffness.html.tera  switcher.html.tera
pageserver/templates/top/: companies.html.tera  company-form.html.tera  edit-password.html.tera  login.html.tera  tag-form.html.tera  tags.html.tera  user-form.html.tera  users.html.tera  well-form.html.tera  wells.html.tera
pageserver/web/public/: login.css  login.js
pageserver/web/user/: nav.css  nav.js
(+3 files in other folders)
